--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ button {
   background-color: rgb(14, 112, 223);
   border-radius: 50%;
   padding: 5px;
-  color: white;
+  color: black;
 }
 
 .divLi {
@@ -102,7 +102,7 @@ button {
 
 .divLi span {
   width: 80%;
-  color: #fff;
+  color: black;
 }
 
 .divLi input {
