--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ button {
   background-color: rgb(14, 112, 223);
   border-radius: 50%;
   padding: 5px;
-  color: black;
+  color: #fff;
 }
 
 .divLi {
